--- a/index.html
+++ b/index.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/07c13fcbdb.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/favicon/devchallenges.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="container">
+        <h1 class="title">Checkout</h1>
+        <div class="box-left">        
+            <form action="#" method="post">
+                <h3 class="subtitle">Contact information</h3>
 
+                <label for="email">
+                    E-mail
+                    <span class="material-icons">
+                        email
+                    </span>
+                    <input type="text" name="email" id="email" placeholder="Enter your email...">
+                </label>
+
+                <label for="phone">
+                    Phone
+                    <span class="material-icons">
+                        call
+                    </span>
+                    <input type="number" name="phone" id="phone" placeholder="Enter your phone...">
+                </label>
+            </form>
+        </div>
+        <div class="box-right">
+
+        </div>
+    </div>
 </body>
 
 </html>
