--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
     <div class="container">
-        <h1 class="title">Checkout</h1>
         <!-- Box-Left -->
         <div class="box-left">
+            <h1 class="title">Checkout</h1>
             <!-- Form -->
             <form action="#" method="post">
                 <h3 class="subtitle">Contact information</h3>
@@ -105,7 +105,67 @@
 
         <!-- Box-Right -->
         <div class="box-right">
+            <div class="shopping-box">
+                <div class="box">
+                    <img src="assets/images/photo1.png" alt="Image">
+                    <div class="box-content">
+                        <h3 class="title-shop">Vintage Backbag</h3>
+                        <div class="box-price">
+                            <p class="price">$54.99</p>
+                            <p class="price2">$94.99</p>
+                        </div>
+                        <div class="count-box">
+                            <div class="icons">
+                                <span class="material-icons">
+                                    remove
+                                </span>
+                            </div>
+                            <p class="number">1</p>
+                            <div class="icons">
+                                <span class="material-icons">
+                                    add
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="box box-2">
+                    <img src="assets/images/photo2.png" alt="Image">
+                    <div class="box-content">
+                        <h3 class="title-shop">Levi Shoes</h3>
+                        <div class="box-price">
+                            <p class="price">$74.99</p>
+                            <p class="price2">$124.99</p>
+                        </div>
+                        <div class="count-box">
+                            <div class="icons">
+                                <span class="material-icons">
+                                    remove
+                                </span>
+                            </div>
+                            <p class="number">1</p>
+                            <div class="icons">
+                                <span class="material-icons">
+                                    add
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box-total">
+                    <div class="box-total-flex">
+                        <h2 class="total-text">Shipping</h2>
+                        <p class="total-price">$19</p>
+                    </div>
+
+                    <div class="box-total-flex">
+                        <h2 class="total-text">Total</h2>
+                        <p class="total-price">$148.98</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
