--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="box-left">
             <h1 class="title">Checkout</h1>
             <!-- Form -->
-            <form action="#" method="post">
+            <form action="#" method="post" id="form">
                 <h3 class="subtitle">Contact information</h3>
 
                 <label for="email">
@@ -98,7 +98,12 @@
                     <p class="text-info">Save this information for next time</p>
                 </div>
 
-                <input type="button" value="Continue">
+                <!-- Alert -->
+                <span role="alert" id="nameError" aria-hidden="true">
+                    Please enter all information.
+                </span>
+
+                <input type="button" id="submit" value="Continue">
             </form>
             <!-- End Form -->
         </div>
@@ -168,6 +173,8 @@
             </div>
         </div>
     </div>
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
